# xsoar-dependency-graph

./: .gitignore  CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pull-request-open.yml  python-package.yml  release.yaml
examples/: plot_all_packs.py  plot_single_pack.py
src/: xsoar_dependency_graph.py
src/parsers/: casetype_parser.py  integration_parser.py  layout_parser.py  pack_parser.py  playbook_parser.py  script_parser.py
src/xsoar_dependency_graph/: dependency_resolver.py  exporter.py  graph_builder.py  visualization.py  xsoar_dependency_graph.py
src/xsoar_dependency_graph/parsers/: basic_parser.py  casetype_parser.py  integration_parser.py  layout_parser.py  pack_parser.py  playbook_parser.py  script_parser.py
src/xsoar_dependency_graph/utils/: ast_utils.py  generic.py  plot_interaction.py
tests/: test_dependencygraph.py
tests/data/mock_content_repo/Packs/MyOrg_CommonPlaybooks/: pack_metadata.json
tests/data/mock_content_repo/Packs/MyOrg_CommonPlaybooks/Playbooks/: GenericPlaybook.yml
tests/data/mock_content_repo/Packs/MyOrg_CommonScripts/: pack_metadata.json
tests/data/mock_content_repo/Packs/MyOrg_CommonScripts/Scripts/GenericScript/: GenericScript.py  GenericScript.yml
tests/data/mock_content_repo/Packs/MyOrg_EDR/: pack_metadata.json
tests/data/mock_content_repo/Packs/MyOrg_EDR/Playbooks/: EDR_InitialTriage.yml
tests/data/mock_content_repo/Packs/MyOrg_EDR/Scripts/EDR_FetchFile/: EDR_FetchFile.py  EDR_FetchFile.yml
tests/data/mock_content_repo/Packs/MyOrg_EDR/Scripts/EDR_Triage/: EDR_Triage.py  EDR_Triage.yml
tests/data/mock_content_repo/Packs/MyOrg_EDR/Scripts/LegacyItem/: LegacyItem.py  LegacyItem.yml
tests/data/mock_content_repo/Packs/MyOrg_Layouts/: pack_metadata.json
tests/data/mock_content_repo/Packs/MyOrg_Layouts/Layouts/: layoutscontainer-GenericLayout.json
tests/data/mock_content_repo/backup/TestPack1/: pack_metadata.json
tests/data/mock_content_repo/backup/TestPack1/Integrations/TestIntegration1/: TestIntegration.yml
tests/data/mock_content_repo/backup/TestPack1/Playbooks/: Placeholder1.yml  Placeholder2.yml
tests/data/mock_content_repo/backup/TestPack1/Scripts/TestScript1/: TestScript1.py  TestScript1.yml
tests/data/mock_content_repo/backup/TestPack1/Scripts/TestScript2/: TestScript2.py  TestScript2.yml
tests/data/mock_content_repo/backup/TestPack1/Scripts/TestScript3/: TestScript3.yml
tests/data/mock_content_repo/backup/TestPack2/: pack_metadata.json
tests/data/mock_content_repo/backup/TestPack2/IncidentTypes/: TestCaseType.json
tests/data/mock_content_repo/backup/TestPack2/Integrations/TestIntegration2/: TestIntegration.yml
tests/data/mock_content_repo/backup/TestPack2/Layouts/: layoutscontainer-TestLayout.json
tests/data/mock_content_repo/backup/TestPack2/Scripts/TestScript4/: TestScript4.py  TestScript4.yml
tests/data/mock_content_repo/backup/TestPack2/Scripts/TestScript5/: TestScript5.py  TestScript5.yml
tests/data/mock_content_repo/backup/TestPack2/Scripts/TestScript6/: TestScript6.py  TestScript6.yml
