[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xsoar-dependency-graph"
dynamic = ["version"]
description = "Creates and plots a dependency graph for XSOAR content packs."
readme = "README.md"
authors = [{ name = "Torbjørn Lium", email = "torben@lium.org" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["xsoar", "utilities", "graph"]
dependencies = [
    "networkx < 3.0.0",
    "matplotlib >= 3.0.0",
    "numpy >= 2.0.0",
    "scipy >= 1.0.0",
    "pyyaml>=6.0.0",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/tlium/xsoar-dependency-graph"
Issues = "https://github.com/tlium/xsoar-dependency-graph/issues"

[tool.hatch.version]
path = "src/__about__.py"
